syntax = "proto3";

package api.valuation;

option go_package = "valuation/api/valuation;valuation";
option java_multiple_files = true;
option java_package = "api.valuation";

service Valuation {
	rpc GetEstimatePrice (GetEstimatePriceRequest) returns (GetEstimatePriceReply);
}

message GetEstimatePriceRequest {
	string origin = 1;
	string destination = 2;
}
message GetEstimatePriceReply {
	string origin = 1;
	string destination = 2;
	int64 price = 3;
}
